tests/single-nginx/service-my-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: my-nginx-service
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
